# multiagent-chatbot

./: README.md  pyproject.toml  start_backend.sh  start_frontend.sh
backend/: __init__.py  main.py  models.py
backend/agents/: booking.py  bookings.py  maths.py  openai_client.py  supervisor.py
frontend/: index.html  script.js  style.css
